[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guidedmind-rag-sdk-python"
version = "0.1.0"
description = "Official Python SDK for GuidedMind RAG API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GuidedMind", email = "support@guidedmind.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "typing-extensions>=4.15.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/guidedmind/guidedmind-rag-sdk-python"
Documentation = "https://github.com/guidedmind/guidedmind-rag-sdk-python#readme"
Repository = "https://github.com/guidedmind/guidedmind-rag-sdk-python.git"
Issues = "https://github.com/guidedmind/guidedmind-rag-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["guidedmind*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (black handles this)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=guidedmind --cov-report=term-missing"
